# blimp

./: .gitignore  .pylintrc  CONTRIBUTING.md  README.md  blimp.cfg.example  default.nix  pinned-nixpkgs.nix  pyproject.toml  schema.sql  setup.py  shell.nix
blimp/: __init__.py  __main__.py  bot.py  context.py  converters.py  customizations.py  eff_large_wordlist.py  message_formatter.py  objects.py  progress.py  transcript.py
blimp/cogs/: __init__.py  alias.py  board.py  botlog.py  coops.py  kiosk.py  logging.py  longslowmode.py  malarkey.py  meta.py  moderation.py  objects.py  reminders.py  rolekiosk.py  sig.py  slowmode.py  tickets.py  tools.py  trigger.py  triggers.py  welcome.py  welcomelog.py  wizard.py
migrations/: 001.sql  002.sql  003.sql  004.sql  005.sql  006.sql
