[build-system]
requires = ["setuptools>=61.0", "discordpy~=2.0", "toml~=0.10"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blimp", "blimp.cogs"]

[project]
name = "blimp"
version = "2.5.0"
authors = [
  { name="Cass Dingenskirchen", email="admin@dingenskirchen.org" },
]
description = "The BLIMP Levitating Intercommunication Management Programme, a tool for discord"
requires-python = ">=3.10"

[project.scripts]
blimp = "blimp:__main__.main"
