[build-system]
requires = ["setuptools", "discord.py", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blimp", "blimp.cogs"]

[project]
name = "blimp"
version = "2.5.2"
authors = [
  { name="Cass Dingenskirchen", email="admin@dingenskirchen.org" },
]
description = "The BLIMP Levitating Intercommunication Management Programme, a tool for discord"
requires-python = ">=3.11"

[project.scripts]
blimp = "blimp:__main__.main"
